# ResumeGPT

./: .gitignore  CLAUDE.md  README.md
.claude/: settings.local.json
backend/: gen_hash.py  main.py  pyproject.toml
backend/app/api/: auth.py  experts.py  job_descriptions.py  resumes.py  users.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  expert.py  expert_evaluation.py  jd_expert_config.py  job_description.py  match_record.py  resume.py  user.py
backend/app/schemas/: common.py  expert.py  expert_evaluation.py  job_description.py  match_record.py  resume.py  user.py
backend/app/services/: expert_seed.py  llm_resume_extractor.py  moe_router.py  ner_engine.py  rag_service.py  resume_extraction.py  workflow_engine.py
backend/app/utils/: text_utils.py
backend/test/: pdf_getter.py
docs/: agent_prompt.md  database_design.md  desgin_1.md  desigin_0.md  pii_design.md  process_prompt.md  reranking_design.md
docs/html-ppt/: index.html  style.css
frontend/: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: style.css
frontend/src/components/: ExpertGraphEditor.vue  ResumeDataViewer.vue
frontend/src/layouts/: AuthLayout.vue  MainLayout.vue
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts
frontend/src/utils/: api.ts
nlp_train/: README.md  model_train.py
nlp_train/data/: data.csv
nlp_train/resume_bert_ner/: interface.py  interface_patch.py  train.py
scripts/: init_db.sql  init_db2.sql  rag_matcher.py  resume_generator.py
(+9 files in other folders)
